--- a/assets/CSS/layout.css
+++ b/assets/CSS/layout.css
@@ -4,7 +4,7 @@ body {
 .banner {
     border-bottom: 1px solid #33A8DB80;
     background-size: cover;
-    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url(../Images/banner.png);
+    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url(../images/banner.png);
     height: 600px;
     padding-top: 60px;
     background-repeat: no-repeat;
