Tentativa correção bug imagem

--- a/assets/CSS/layout.css
+++ b/assets/CSS/layout.css
@@ -97,7 +97,7 @@ body {
 #transform-world {
     color: #fff;
     height: 560px;
-    background-image: url(../images/woman-code.png);
+    background-image: url(../Images/woman-code.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
